project/stage/testing/semantic/semantic_tests/accept/while.ul
void main () {
    boolean cond;
    cond = true;
    while(cond) {
        println "loop body runs once";
        cond = gimmeFalse();
    }
    println "Finished loop";
}

boolean gimmeFalse() {
    return false;
}
