project/stage/testing/semantic/semantic_tests/reject/assign_int_tofloat3.ul
void main() {
    float f;
    f = gimme();
}

int gimme() {
    return 0;
}
